# lightshifts

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpublish.yml  release.yml  tests.yml
examples/: example_estimate_branching_ratios.ipynb  example_lightshifts_yb173.ipynb  example_transition_collection_yb173.ipynb  transitions_1S0.json  transitions_3P0.json  transitions_3P1.json  transitions_OSG.json  transitions_barber.json  transitions_full.json
lightshifts/: __init__.py  atom.py  auxiliary.py  lightshift_solver.py
requirements/: common.txt  dev.txt
src/lightshifts/: __init__.py  atom.py  auxiliary.py  consts.py  lightshift_solver.py
tests/: conftest.py  test_atom.py  test_auxiliary.py  test_lightshifts.py
tests/fixtures/: atom_yb173.json
